--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ config/master.key
 config/database.yml
 
 # Only include if you have production secrets in this file, which is no longer a Rails default
-# config/secrets.yml
+config/secrets.yml
 
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
